* 0.9.91 (????-??-??):
  - Dropped the Hpricot support. Not worth it, API changes too often, and
    libxml-ruby now rocks more than ever.

* 0.9.9 (2008-12-18):
  - Bugfix for the new faster-than-nokogiri Hpricot version (broke the API)

* 0.9.8 (2008-10-23):
  - Much improved test suite. More granular, better coverage, much faster
  - The collection proxy behaviour is now a lot faster when called in a loop
  - Collection Proxies are a lot more transparent
  - Reduced memory footprint of instantiated XMLObject trees
  - Calling elements, attributes, question methods or pluralized collections
    (anything, really) that's not there raises NameError instead of just
    returning nil
  - Removed #rb (wasn't really all that useful)
  - The [:sym => 'foo'] notation now only supports :attr and :elem
  - The question method notation is a bit more strict
  - JREXML adapter removed. It barely sped up REXML under JRuby

* 0.9.7 (2008-10-20):
  - LibXML adapter added
  - JREXML "adapter" added, as well as JREXML support during tests and
    benchmark tasks, but only when running under JRuby
  - Backwards incompatible change: Elements with no text and multiple CDATA
    values no longer report their value as their first CDATA element. They
    report all of their CDATA nodes joined together, a-la LibXML

* 0.9.6 (2008-10-19):
  - Ruby 1.9 compatibility
  - XMLObject no longer requires ActiveSupport. Note that proper array
    pluralization still depends on ActiveSupport's Inflector, so if it's not
    there, we just pluralize things by tacking 's' at the end.
  - XMLObject no longer tries to load Hpricot by default (too cumbersome
    to test). Use "require 'xml-object/adapters/hpricot'" to enable the
    Hpricot adapter.
  - Backwards incompatible change. For the following XML:

      <foo>
        <bar>
        <bez>
      </foo>

      <foos>Yipes!</foos>

    before:

      xml.foos => # The <foo> "array"

    now:

      xml.foos => # The <foos> element
