@@ -1,0 +1,17 @@
+<rating>
+  <category>
+    <property/>
+    <property/>
+    <property/>
+  </category>
+  <category>
+    <property/>
+    <property/>
+    <property/>
+  </category>
+  <category>
+    <property/>
+    <property/>
+    <property/>
+  </category>
+</rating>
